# fluxor

./: .gitignore
backend/fluxor-backend/: README.md  demo-infra.yml  docker-compose.yml
backend/fluxor-backend/execution-orchestrator/: .env.example  package-lock.json  package.json
backend/fluxor-backend/execution-orchestrator/src/: index.ts  ua-client.ts
backend/fluxor-backend/intent-api/: .env.example  Dockerfile  package-lock.json  package.json
backend/fluxor-backend/intent-api/src/: index.ts
backend/fluxor-backend/solver-rust/: .env.example  .env.local  Cargo.toml  Dockerfile
backend/fluxor-backend/solver-rust/src/: config.rs  db.rs  fee.rs  main.rs  route_builder.rs  routing.rs  scoring.rs  token_registry.rs  types.rs  worker.rs
backend/fluxor-backend/solver-rust/src/aggregator/: bungee.rs  jupiter.rs  lifi.rs  mayan.rs  merge.rs  mock.rs  mod.rs  relay.rs  token_map.rs
backend/fluxor-backend/solver-rust/src/prices/: coingecko.rs
backend/fluxor-backend/solver-rust/src/solana/: jupiter.rs
contracts/Contract.json/: Contract.json
frontend/FluxorApp/: app.json  package-lock.json  package.json
frontend/FluxorApp/app/: _layout.tsx
frontend/FluxorApp/app/(auth)/: login.tsx
frontend/FluxorApp/app/(tabs)/: _layout.tsx  earn.tsx  home.tsx  (+4 more)
frontend/FluxorApp/assets/: Contract for frontend.json
frontend/FluxorApp/components/: SmartPriceText.tsx  TokenIcon.tsx
frontend/FluxorApp/logic/: DominanceMetrics.ts  FearAndGreed.ts  Token.ts  TokenSearchManager.ts  useMarketViewModel.ts  useWalletViewModel.ts
frontend/FluxorApp/theme/: colors.ts
(+2 files in other folders)
