[package]
name = "fluxor-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers-core = "1.0.2"
ethers-providers = "1.0.2"
ethers-signers = "1.0.2"
mongodb = "2.4"
redis = { version = "0.23", features = ["aio", "tokio-comp"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = "1.35"
envy = "0.4"
tracing-subscriber = "0.3"
async-nats = "0.45"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
once_cell = "1.18"

[profile.release]
opt-level = 3
